# MDB

./: .gitignore  ARCHITECTURE_COMPARISON.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_NOTES.md  README.md  REFACTORING_SUMMARY.md  TASK_SUMMARY.md  build_log.txt  plan-unityExplorerMod.prompt.md
.github/: FUNDING.yml
.github/workflows/: build.yml  deploy-docs.yml
Documentation/Examples/: README.md  UnityStubs.cs
Documentation/Examples/GameStats/: GameStats.csproj  GameStatsMod.cs  README.md
Documentation/Examples/HelloWorld/: HelloWorld.csproj  HelloWorldMod.cs  README.md
Documentation/Examples/MDB_Explorer_ImGui/: .gitignore  ComponentReflector.cs  DeobfuscationHelper.cs  DeobfuscationPanel.cs  ExplorerMod.cs  GameObjectInspector.cs  ImGuiBindings.cs  MDB_Explorer_ImGui.csproj  MDB_Explorer_ImGui.sln  README.md  SceneHierarchy.cs  Theme.cs
Documentation/Examples/MDB_Explorer_ImGui/Helpers/: Il2CppHelpers.cs  WindowConfig.cs
Documentation/Examples/MDB_Explorer_ImGui/Models/: ComponentInfo.cs  HierarchyNode.cs  InspectionContext.cs  ReflectionModels.cs  SceneInfo.cs
Documentation/Examples/UnityDebugInterceptor/: .gitignore  README.md  UnityDebugInterceptor.cs  UnityDebugInterceptor.csproj
MDB_Bridge/: CMakeLists.txt  MDB_Bridge.vcxproj  MDB_Bridge.vcxproj.filters  bridge_exports.cpp  bridge_exports.h  build.ps1  build_trigger.cpp  build_trigger.hpp  dllmain.cpp  il2cpp_dumper.cpp  il2cpp_resolver.hpp  imgui_exports.cpp  imgui_exports.h  imgui_integration.cpp  imgui_integration.h  vcpkg.json  version.def  wrapper_generator.cpp  wrapper_generator.hpp
MDB_Bridge/imgui/: README.txt
MDB_Bridge/src/codegen/: build_trigger.cpp
MDB_Bridge/src/core/: bridge_exports.cpp  bridge_exports.h  dllmain.cpp  mdb_log.h
MDB_Bridge/src/il2cpp/: il2cpp_dumper.cpp  il2cpp_dumper.hpp  il2cpp_resolver.hpp  mapping_loader.hpp  obfuscation_detector.cpp  obfuscation_detector.hpp
MDB_Bridge/src/imgui/: imgui_exports.cpp  imgui_exports.h  imgui_integration.cpp
MDB_Bridge/src/proxy/: version_proxy.cpp  version_proxy.h
MDB_Common/: CMakeLists.txt
MDB_Common/IL2CPP/: Il2CppSignatures.hpp  Il2CppTableDefine.hpp  Il2CppTypes.hpp  SignatureScanner.hpp
MDB_Core/: DeobfuscationTest.csproj  GameSDK.ModHost.csproj  MDB_Core.csproj
MDB_Core/Core/: Il2CppBase.cs  Il2CppBridge.cs  Il2CppBridgeConstants.cs  Il2CppBridgeCore.cs  Il2CppBridgeHelpers.cs  Il2CppObject.cs  Il2CppRuntimeCore.cs  Il2CppStringHelper.cs  ImGui.cs
MDB_Core/Core/Bridge/: Il2CppBridgeConstants.cs  Il2CppBridgeCore.cs  Il2CppBridgeHelpers.cs
MDB_Core/Core/ImGui/: ImGui.cs  ImGuiManager.cs
MDB_Core/Core/Injection/: ClassInjector.cs  Il2CppStructs.cs  InjectorHelpers.cs  MDBRunner.cs  NativeImports.cs  XrefScanner.cs
MDB_Core/Core/Runtime/: Il2CppFieldAccessor.cs  Il2CppMethodInvoker.cs  Il2CppTypeSystem.cs
MDB_Core/Core/Types/: Il2CppMarshaler.cs  Il2CppObject.cs  Il2CppStringHelper.cs
MDB_Core/Core/Unity/: UnityValueTypes.cs
MDB_Core/Deobfuscation/: DumpIndex.cs  DumpParser.cs  MappingDatabase.cs  SignatureGenerator.cs
MDB_Core/ModHost/: ModAttribute.cs  ModBase.cs  ModLogger.cs  ModManager.cs
MDB_Core/ModHost/Patching/: HookManager.cs  PatchApplication.cs  PatchAttribute.cs  PatchDebugger.cs  PatchDiscovery.cs  PatchProcessor.cs  PatchSignatureAnalyzer.cs
MDB_Dumper/: DllMain.cpp  Il2CppSignatures.hpp  Il2cppApi.hpp  SignatureScanner.hpp  build.ps1
MDB_Parser/: build.bat  build_log.txt  generator_config.json  wrapper_generator.py
docs/: README.md  _config.yml  api.md  examples.md  getting-started.md  guides.md  index.md
docs/_api/: hookmanager.md  il2cpp-bridge.md  imgui-manager.md  imgui.md  logger.md  modattribute.md  modbase.md  patch-attributes.md
docs/_guides/: architecture.md  class-injection.md  proxy-injection.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
